--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,11 +16,8 @@ jobs:
     strategy:
       matrix:
         goos: [linux, darwin, windows]
-        goarch: [amd64, arm64, 386, arm]
+        goarch: [amd64, arm64]
         exclude:
-          # Windows/arm is not a supported combo in Go
-          - goos: windows
-            goarch: arm
           - goos: windows
             goarch: arm64
 
