--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
           EXT=""
           if [ "$GOOS" = "windows" ]; then EXT=".exe"; fi
           BIN_NAME="shair-${GOOS}-${GOARCH}${EXT}"
-          GOOS=$GOOS GOARCH=$GOARCH go build -o "dist/$BIN_NAME" .
+          GOOS=$GOOS GOARCH=$GOARCH go build -o="dist/$BIN_NAME" cmd/tui
 
       - name: Upload Release
         uses: softprops/action-gh-release@v1
